--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEDIA WAVE | Digital Agency</title>
     
+    <title>MEDIA WAVE | Digital Agency</title>
+    <meta name="description" content="SMM агентство нового формата. Чистая стратегия, качественный продакшн, AI-технологии и создание сайтов для вашего бренда.">
+    
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mediawave.ru/">
+    <meta property="og:title" content="MEDIA WAVE | Архитекторы Контента">
+    <meta property="og:description" content="Упакуем ваш бизнес удаленно. SMM стратегии, Web-разработка и AI-контент.">
+    <meta property="og:image" content="og-image.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="MEDIA WAVE | Архитекторы Контента">
+    <meta property="twitter:description" content="Упакуем ваш бизнес удаленно. SMM стратегии, Web-разработка и AI-контент.">
+    <meta property="twitter:image" content="og-image.jpg">
+
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="shortcut icon" href="favicon.ico" />
