--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       "email": "mediawave@list.ru",
       "url": "https://mediawave.ru/",
       "description": "SMM агентство нового формата. Чистая стратегия, качественный продакшн, AI-технологии и создание сайтов.",
-      "priceRange": "12000-60000 RUB",
+      "priceRange": "14000-55000 RUB",
       "address": { "@type": "PostalAddress", "addressCountry": "RU" },
       "sameAs": [ "https://t.me/gavrilenko_ira" ],
       "offers": [
-        { "@type": "Offer", "name": "SMM Lite", "price": "12000", "priceCurrency": "RUB" },
-        { "@type": "Offer", "name": "SMM Medium", "price": "20000", "priceCurrency": "RUB" },
-        { "@type": "Offer", "name": "SMM Full", "price": "50000", "priceCurrency": "RUB" }
+        { "@type": "Offer", "name": "SMM Lite", "price": "14000", "priceCurrency": "RUB" },
+        { "@type": "Offer", "name": "SMM Medium", "price": "22000", "priceCurrency": "RUB" },
+        { "@type": "Offer", "name": "SMM Full", "price": "55000", "priceCurrency": "RUB" }
       ]
     }
     </script>
@@ -569,7 +569,7 @@
             <div class="glass pricing-card hover-effect">
                 <div>
                     <div class="price-title">Lite</div>
-                    <div class="price-amount">12к <span>/ мес</span></div>
+                    <div class="price-amount">14к <span>/ мес</span></div>
                     <div class="price-desc">Работа с вашими материалами</div>
                     <ul class="price-list">
                         <li>Ведение 1 соцсети</li>
@@ -584,7 +584,7 @@
             <div class="glass pricing-card hover-effect">
                 <div>
                     <div class="price-title" style="color: var(--accent);">Medium</div>
-                    <div class="price-amount">20к <span>/ мес</span></div>
+                    <div class="price-amount">22к <span>/ мес</span></div>
                     <div class="price-desc">SMM под ключ для одной сети</div>
                     <ul class="price-list">
                         <li>Разработка контент-плана</li>
@@ -598,7 +598,7 @@
             <div class="glass pricing-card hover-effect">
                 <div>
                     <div class="price-title">Full</div>
-                    <div class="price-amount">50к <span>/ мес</span></div>
+                    <div class="price-amount">55к <span>/ мес</span></div>
                     <div class="price-desc">Комплекс: Inst + VK + Telegram</div>
                     <ul class="price-list">
                         <li>Контент-план и стратегия</li>
@@ -617,7 +617,8 @@
             <div class="glass extra-card hover-effect">
                 <h3 style="font-size: 1.8rem; margin-bottom: 20px; font-weight:800;">Образование</h3>
                 <ul class="price-list">
-                    <li><b style="font-size: 1.2rem;">Консультация (Telegram)</b> — <span style="color:var(--accent); font-weight:800;">3 000₽ / час</span><br><span style="font-size:0.9rem; opacity:0.7;">Обучение основам</span></li>
+                    <li><b style="font-size: 1.2rem;">Консультация</b> — <span style="color:var(--accent); font-weight:800;">3 000₽ / час</span><br><span style="font-size:0.9rem; opacity:0.7;">Ответы на вопросы, разбор ситуации</span></li>
+                    <li><b style="font-size: 1.2rem;">Обучение ведению соцсетей</b> — <span style="color:var(--accent); font-weight:800;">3 000₽ / час</span><br><span style="font-size:0.9rem; opacity:0.7;">Основы, инструменты, практика</span></li>
                     <li><b style="font-size: 1.2rem;">Аудит канала/страницы</b> — <span style="color:var(--accent); font-weight:800;">5 000₽</span></li>
                     <li><b style="font-size: 1.2rem;">Сопровождение</b> — <span style="color:var(--accent); font-weight:800;">10 000₽ / мес</span><br><span style="font-size:0.9rem; opacity:0.7;">Созвоны раз в неделю, контроль, цели</span></li>
                     <li><b style="font-size: 1.2rem;">Наставничество</b> — <span style="color:var(--accent); font-weight:800;">15 000₽ / мес</span><br><span style="font-size:0.9rem; opacity:0.7;">Ведете вы, я помогаю и направляю</span></li>
@@ -628,7 +629,7 @@
             <div class="glass extra-card hover-effect">
                 <h3 style="font-size: 1.8rem; margin-bottom: 20px; font-weight:800;">Дополнительно</h3>
                 <ul class="price-list">
-                    <li><b style="font-size: 1.2rem;">Тариф «Дубль»</b> — <span style="color:var(--accent); font-weight:800;">10 000₽ / мес</span><br><span style="font-size:0.9rem; opacity:0.7;">Полный дубляж контента из одной сети в другую</span></li>
+                    <li><b style="font-size: 1.2rem;">Тариф «Дубль»</b> — <span style="color:var(--accent); font-weight:800;">11 000₽ / мес</span><br><span style="font-size:0.9rem; opacity:0.7;">Полный дубляж контента из одной сети в другую</span></li>
                     <li><b style="font-size: 1.2rem;">Создание Сайта</b> — <span style="color:var(--accent); font-weight:800;">от 15 000₽</span><br><span style="font-size:0.9rem; opacity:0.7;">Для доверия и узнаваемости бренда</span></li>
                     
                     <li>
